<?xml version="1.0" encoding="UTF-8"?>
<!--
	LICENSE
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.the-qa-company</groupId>
    <artifactId>qendpoint-parent</artifactId>
    <version>2.4.0</version>

    <packaging>pom</packaging>

    <name>qendpoint</name>
    <description>The qEndpoint is a highly scalable triple store with full-text and GeoSPARQL
        support. It can be used as a standalone SPARQL endpoint, or as a dependency.</description>
    <url>https://github.com/the-qa-company/qEndpoint</url>

    <licenses>
        <license>
            <name>GNU General Public License (GPL) 3.0 with notice</name>
            <url>https://github.com/the-qa-company/qEndpoint/blob/master/LICENSE.md</url>
        </license>
    </licenses>

    <organization>
        <name>The QA Company</name>
        <url>http://the-qa-company.com</url>
    </organization>

    <developers>
        <developer>
            <id>dennis.diefenbach</id>
            <name>Dennis Diefenbach</name>
            <email>dennis.diefenbach@the-qa-company.com</email>
            <organization>The QA Company</organization>
            <organizationUrl>https://the-qa-company.com/</organizationUrl>
        </developer>
        <developer>
            <id>ali.haidar</id>
            <name>Ali Haidar</name>
            <email>ali.haidar@the-qa-company.com</email>
            <organization>The QA Company</organization>
            <organizationUrl>https://the-qa-company.com/</organizationUrl>
        </developer>
        <developer>
            <id>antoine.willerval</id>
            <name>Antoine Willerval</name>
            <email>antoine.willerval@the-qa-company.com</email>
            <organization>The QA Company</organization>
            <organizationUrl>https://the-qa-company.com/</organizationUrl>
        </developer>
        <developer>
            <id>clement.defretiere</id>
            <name>Clément Defrétière</name>
            <email>clement.defretiere@the-qa-company.com</email>
            <organization>The QA Company</organization>
            <organizationUrl>https://the-qa-company.com/</organizationUrl>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.source.version>17</java.source.version>
        <java.target.version>17</java.target.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>oss.sonatype.org-snapshot</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>sonatype-nexus-staging</id>
            <name>Nexus Release Repository</name>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.2.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.11.2</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <configuration>
                                    <doclint>none</doclint>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-release-plugin</artifactId>
                        <version>2.5.3</version>
                        <configuration>
                            <autoVersionSubmodules>true</autoVersionSubmodules>
                            <useReleaseProfile>false</useReleaseProfile>
                            <releaseProfiles>release</releaseProfiles>
                            <goals>deploy</goals>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.13</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>sonatype-nexus-staging</serverId>
                            <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <scm>
        <connection>scm:git:git://github.com/the-qa-company/qEndpoint.git</connection>
        <developerConnection>scm:git:git@github.com:the-qa-company/qEndpoint.git</developerConnection>
        <url>https://github.com/the-qa-company/qEndpoint</url>
        <tag>HEAD</tag>
    </scm>

    <build>
        <plugins>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.19.0</version>
                <configuration>
                    <includes>
                        <include>**/*.java</include>
                    </includes>
                    <lineEnding>LF</lineEnding>
                    <configFile>${project.basedir}/formatter-config.xml</configFile>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>qendpoint-core</module>
        <module>qendpoint-cli</module>
        <module>qendpoint-backend</module>
        <module>qendpoint-store</module>
    </modules>

    <issueManagement>
        <system>Github</system>
        <url>https://github.com/the-qa-company/qEndpoint/issues</url>
    </issueManagement>
</project>
